# c3_testing

core/: c3.cc  c3.h  c3_options.h  c3_plus.cc  c3_plus.h  lcs.cc  lcs.h
core/configs/: solver_options_default.yaml
examples/: BUILD.bazel  lcs_factory_system_example.cc
examples/resources/plate/: actual cube.sdf  c3_controller_plate_franka_options.yaml  c3_controller_plate_options.yaml  cube.sdf  iC3_options.yaml  iC3_options_franka.yaml  plate.sdf  plate_end_effector.sdf
lcm/: BUILD.bazel  lcm_driven_loop.h  lcm_trajectory.cc  lcm_trajectory.h
lcmtypes/: BUILD.bazel  lcmt_controller_switch.lcm  lcmt_metadata.lcm  lcmt_robot_output.lcm  lcmt_saved_traj.lcm  lcmt_timestamped_saved_traj.lcm  lcmt_trajectory_block.lcm
multibody/: lcs_factory.cc
systems/: BUILD.bazel  c3_controller.cc  c3_controller.h  c3_controller_options.h  iC3.cc  iC3.h  iC3_options.h  manual_input.cc  manual_input.h
systems/common/: quaternion_error_hessian.cc
systems/test/: quaternion_cost_test.cc  quaternion_cost_test.yaml
tools/: BUILD.bazel
